# lbm-arrayfire

./: CMakeLists.txt  README.md
cpp/: CMakeLists.txt  d2q9_bgk_channel.cpp  d2q9_bgk_channel_packed.cpp  d2q9_bgk_lid.cpp  d2q9_shanchen.cpp  d3q19_mrt_channel.cpp  d3q27_bgk_channel.cpp  d3q27_bgk_lid.cpp  d3q27_mrt_channel.cpp  d3q27_mrt_lid.cpp
fun/: CMakeLists.txt
lbm/: CMakeLists.txt  d2q9_bgk_channel.cpp  d2q9_bgk_lid.cpp  d3q27_bgk_channel.cpp  lbm_bgk.cpp  lbm_mrt.cpp
rust/: Cargo.toml  R9_32bit_d2q9_bgk_channel_mlups_3000_1000.csv  R9_32bit_d2q9_bgk_channel_mlups_420_150.csv  R9_32bit_d2q9_bgk_channel_mlups_600_200.csv  R9_64bit_d2q9_bgk_channel_mlups_1500_400.csv  R9_64bit_d2q9_bgk_lid_mlups_128.csv  R9_64bit_d2q9_bgk_lid_mlups_256.csv  R9_64bit_d2q9_bgk_lid_mlups_512.csv  R9_d2q9_bgk_channel_mlups_1000_300.csv  R9_d2q9_bgk_channel_mlups_1500_400.csv  R9_d2q9_bgk_channel_mlups_300_100.csv  R9_d2q9_bgk_channel_mlups_420_150.csv  R9_d2q9_bgk_lid_mlups_128.csv  d2q9_bgk_channel_mlups.pzfx  d2q9_bgk_channel_mlups_300_100.csv  d2q9_bgk_channel_mlups_600_200.csv  d2q9_bgk_channel_mlups_macbookr9_32bit.pzfx  d2q9_bgk_channel_mlups_macbookr9_64bit.pzfx  d2q9_bgk_channel_mlups_rtx3090.pzfx  d2q9_bgk_channel_mlups_rtx3090_32bit.pzfx  d2q9_bgk_channel_mlups_rtx3090_64bit.pzfx  d2q9_bgk_lid_mlups.csv  d2q9_bgk_lid_mlups.pzfx  d2q9_bgk_lid_mlups_1024.csv  d2q9_bgk_lid_mlups_2048.csv  d2q9_bgk_lid_mlups_512.csv  d2q9_bgk_lid_mlups_64.csv  d2q9_bgk_lid_mlups_macbookr9_32bit.pzfx  d2q9_bgk_lid_mlups_macbookr9_64bit.pzfx  d2q9_bgk_lid_mlups_rtx3090_32bit.pzfx  d2q9_bgk_lid_mlups_rtx3090_64bit.pzfx  d3q27_bgk_lid_mlups.csv  gtx1070_32bit_d2q9_bgk_channel_mlups_1000_300.csv  gtx1070_32bit_d2q9_bgk_channel_mlups_1500_400.csv  gtx1070_32bit_d2q9_bgk_channel_mlups_3000_1000.csv  gtx1070_32bit_d2q9_bgk_channel_mlups_300_100.csv  gtx1070_32bit_d2q9_bgk_channel_mlups_420_150.csv  gtx1070_32bit_d2q9_bgk_lid_mlups_1024.csv  gtx1070_64bit_d2q9_bgk_channel_mlups_1500_400.csv  gtx1070_64bit_d2q9_bgk_channel_mlups_300_100.csv  (+68 more)
rust/benchmarks/: R9_32bit_d2q9_bgk_channel_mlups_1000_300.csv  R9_32bit_d2q9_bgk_channel_mlups_1500_400.csv  R9_32bit_d2q9_bgk_channel_mlups_2000_500.csv  R9_32bit_d2q9_bgk_channel_mlups_300_100.csv  R9_32bit_d2q9_bgk_lid_mlups_1024.csv  R9_32bit_d2q9_bgk_lid_mlups_128.csv  R9_32bit_d2q9_bgk_lid_mlups_2048.csv  R9_32bit_d2q9_bgk_lid_mlups_256.csv  R9_32bit_d2q9_bgk_lid_mlups_512.csv  R9_32bit_d2q9_bgk_lid_mlups_64.csv  R9_64bit_d2q9_bgk_channel_mlups_1000_300.csv  R9_64bit_d2q9_bgk_channel_mlups_2000_500.csv  R9_64bit_d2q9_bgk_channel_mlups_300_100.csv  R9_64bit_d2q9_bgk_channel_mlups_420_150.csv  R9_64bit_d2q9_bgk_channel_mlups_600_200.csv  R9_64bit_d2q9_bgk_lid_mlups_1024.csv  R9_64bit_d2q9_bgk_lid_mlups_64.csv  gtx1070_32bit_d2q9_bgk_channel_mlups_2000_500.csv  gtx1070_32bit_d2q9_bgk_channel_mlups_4200_1500.csv  gtx1070_32bit_d2q9_bgk_channel_mlups_600_200.csv  gtx1070_32bit_d2q9_bgk_lid_mlups_128.csv  gtx1070_32bit_d2q9_bgk_lid_mlups_2048.csv  gtx1070_32bit_d2q9_bgk_lid_mlups_256.csv  gtx1070_32bit_d2q9_bgk_lid_mlups_512.csv  gtx1070_32bit_d2q9_bgk_lid_mlups_64.csv  gtx1070_32bit_d3q27_mrt_lid_mlups_128.csv  gtx1070_32bit_d3q27_mrt_lid_mlups_16.csv  gtx1070_32bit_d3q27_mrt_lid_mlups_32.csv  gtx1070_32bit_d3q27_mrt_lid_mlups_64.csv  gtx1070_64bit_d2q9_bgk_channel_mlups_1000_300.csv  gtx1070_64bit_d2q9_bgk_channel_mlups_2000_500.csv  gtx1070_64bit_d2q9_bgk_channel_mlups_3000_1000.csv  gtx1070_64bit_d2q9_bgk_channel_mlups_420_150.csv  gtx1070_64bit_d2q9_bgk_channel_mlups_600_200.csv  gtx1070_64bit_d2q9_bgk_lid_mlups_128.csv  gtx1070_64bit_d2q9_bgk_lid_mlups_2048.csv  gtx1070_64bit_d2q9_bgk_lid_mlups_256.csv  gtx1070_64bit_d3q27_mrt_lid_mlups_16.csv  gtx1070_64bit_d3q27_mrt_lid_mlups_32.csv  gtx1070_64bit_d3q27_mrt_lid_mlups_64.csv  (+104 more)
rust/examples/: d2q9_bgk_channel.rs  d2q9_bgk_lid.rs  d3q27_bgk_lid.rs  d3q27_mrt_channel.rs  d3q27_mrt_lid.rs  tests.rs
